--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,5 +6,13 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
 
+# available plugins: battery, cpu-usage, gpu-usage, ram-usage, network, network-bandwith, weather, time
+set -g @dracula-plugins "battery network cpu-usage ram-usage weather time"
+
+set -g @dracula-show-timezone false
+set -g @dracula-day-month true
+set -g @dracula-military-time true
+set -g @dracula-show-fahrenheit false
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
