--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -12,21 +12,75 @@ font:
   size: 12.0
 
 # Colors (Material Theme (Deep Ocean))
+# colors:
+#   primary:
+#     background: '#0F111A'
+#     foreground: '#8F93A2'
+
+#   normal:
+#     black:   '#000000'
+#     red:     '#f07178'
+#     green:   '#c3e88d'
+#     yellow:  '#ffcb6b'
+#     blue:    '#82aaff'
+#     magenta: '#c792ea'
+#     cyan:    '#89ddff'
+#     white:   '#eeffff'
+
+# Colors for dracula
 colors:
   primary:
-    background: '#0F111A'
-    foreground: '#8F93A2'
-
+    background: '#282a36'
+    foreground: '#f8f8f2'
+    bright_foreground: '#ffffff'
+  cursor:
+    text: CellBackground
+    cursor: CellForeground
+  vi_mode_cursor:
+    text: CellBackground
+    cursor: CellForeground
+  search:
+    matches:
+      foreground: '#44475a'
+      background: '#50fa7b'
+    focused_match:
+      foreground: '#44475a'
+      background: '#ffb86c'
+    bar:
+      background: '#282a36'
+      foreground: '#f8f8f2'
+  hints:
+    start:
+      foreground: '#282a36'
+      background: '#f1fa8c'
+    end:
+      foreground: '#f1fa8c'
+      background: '#282a36'
+  line_indicator:
+    foreground: None
+    background: None
+  selection:
+    text: CellForeground
+    background: '#44475a'
   normal:
-    black:   '#000000'
-    red:     '#f07178'
-    green:   '#c3e88d'
-    yellow:  '#ffcb6b'
-    blue:    '#82aaff'
-    magenta: '#c792ea'
-    cyan:    '#89ddff'
-    white:   '#eeffff'
+    black: '#21222c'
+    red: '#ff5555'
+    green: '#50fa7b'
+    yellow: '#f1fa8c'
+    blue: '#bd93f9'
+    magenta: '#ff79c6'
+    cyan: '#8be9fd'
+    white: '#f8f8f2'
+  bright:
+    black: '#6272a4'
+    red: '#ff6e6e'
+    green: '#69ff94'
+    yellow: '#ffffa5'
+    blue: '#d6acff'
+    magenta: '#ff92df'
+    cyan: '#a4ffff'
+    white: '#ffffff'
 
 key_bindings:
   # Fix for UK mac not recognising # key combo
-  - { key: Key3,     mods: Alt,     chars: "#"                        }
+  - { key: Key3, mods: Alt, chars: "#" }
