--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,5 @@
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option default-terminal "screen-256color"
+set-option -a terminal-overrides ",alacritty:RGB"
 set -g mouse on
 
 # List of plugins
