tmux: nvim: fix hotkye and remove tmux status

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,7 +8,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
 
 # available plugins: battery, cpu-usage, gpu-usage, ram-usage, network, network-bandwith, weather, time
-set -g @dracula-plugins "battery network cpu-usage ram-usage time"
+set -g @dracula-plugins "time"
 
 set -g @dracula-show-timezone false
 set -g @dracula-day-month true
