--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,6 @@
 set-option default-terminal "screen-256color"
 set-option -a terminal-overrides ",alacritty:RGB"
+set-option -g history-limit 50000
 set -g mouse on
 
 # List of plugins
