--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -18,6 +18,8 @@ shell:
     - -c
     - "tmux attach || tmux new -s main"
 
+env:
+  TERM: alacritty
 # Colors (Material Theme (Deep Ocean))
 # colors:
 #   primary:
