--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,5 @@
-set-option default-terminal "screen-256color"
+# set-option default-terminal "screen-256color"
+set-option default-terminal "alacritty"
 set-option -a terminal-overrides ",alacritty:RGB"
 set-option -g history-limit 50000
 set -g mouse on
