--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -14,9 +14,10 @@ font:
 shell:
   program: zsh
   args:
-    - -l
-    - -c
-    - "zellij attach --index 0 || zellij" # "tmux attach || tmux new -s main"
+   - -l
+   - -c
+   - "tmux attach || tmux new -s main"
+  # - "zellij attach --index 0 || zellij" 
 
 env:
   TERM: alacritty
