--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -7,8 +7,7 @@ scrolling:
   multiplier: 3
 font:
   normal:
-    family: FiraCode Nerd Font Mono
-    style: Retina
+    family: JetBrains Mono
   size: 12.0
 
 shell:
