--- a/helix/config.toml
+++ b/helix/config.toml
@@ -1,11 +1,16 @@
 theme = "dracula"
 
 [editor]
-line-number = "relative"
+color-modes = true
+cursorline = true
 idle-timeout = 200
+line-number = "relative"
 
 [editor.file-picker]
 hidden = false
 
 [editor.lsp]
 display-messages = true
+
+[editor.indent-guides]
+render = true
