--- a/helix/config.toml
+++ b/helix/config.toml
@@ -17,5 +17,5 @@ render = true
 display-messages = true
 
 [editor.statusline]
-left = ["mode", "file-name", "spinner"]
+left = ["mode", "file-name", "version-control", "spacer", "spinner"]
 right = ["diagnostics", "file-type", "file-encoding", "file-line-ending", "selections", "spacer", "position-percentage", "position"]
