--- a/.gitignore
+++ b/.gitignore
@@ -5,21 +5,15 @@
 !.gitignore
 !.zshrc
 !/README.md
-!/alacritty/
-!/alacritty/*
 !/bat/
 !/bat/*
+!/bat/themes/
+!/bat/themes/*
+!/ghostty/
+!/ghostty/*
+!/ghostty/themes/
+!/ghostty/themes/*
 !/helix/
 !/helix/*
 /helix/runtime
-!/nvim/
-!/nvim/*
-!/nvim/lua/*
-/nvim/plugins/
 !/starship.toml
-!/tmux/
-!/tmux/*
-!/wezterm/
-!/wezterm/*
-!/zellij/
-!/zellij/*
